--- a/css/styles.css
+++ b/css/styles.css
@@ -114,10 +114,17 @@ body {
 /* main page button*/
 
 .main-page {
-  background-color: var(--main-link);
   padding-top: 188px;
   padding-bottom: 188px;
   display: flex;
+
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/hero-back/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-text {
