--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,6 @@ img {
 }
 .features-list {
   width: calc((100% - 48px) / 3);
-  display: block;
 }
 
 .apps {
@@ -414,9 +413,12 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
+.image {
+  display: block;
+}
 
-.features-list:hover,
-.features-list:focus {
+.image-list:hover,
+.image-list:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
