--- a/css/styles.css
+++ b/css/styles.css
@@ -417,8 +417,8 @@ img {
   display: block;
 }
 
-.features-list:hover,
-.features-list:focus {
+.image:hover,
+.image:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
