--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
   --link-ocean: #404bbf;
   --main-link: #2e2f42;
   --porfolio-btn: #e7e9fc;
+  --icon: #8e8f99;
 }
 
 .list {
@@ -310,6 +311,35 @@ img {
   margin-bottom: 72px;
 }
 
+.list-items {
+  display: flex;
+  gap: 24px;
+}
+
+.menu-items {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+  color: rgba(142, 143, 153, 1);
+}
+
+.link-items {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: var(--icon);
+}
+
+.link-items:hover,
+.link-items:focus {
+  color: var(--link-ocean);
+  border-color: var(--link-ocean);
+}
+
 /* footer*/
 
 .end {
@@ -317,10 +347,20 @@ img {
   padding: 100px 0;
   margin: 0;
 }
+
+.end-margin {
+  display: flex;
+  align-items: baseline;
+
+  gap: 120px;
+}
 .logotype {
   display: inline-block;
   margin: 0 0 16px;
   padding: 0;
+}
+
+.logo-p {
 }
 
 .text-end {
