--- a/css/styles.css
+++ b/css/styles.css
@@ -397,7 +397,6 @@ img {
 .end-margin {
   display: flex;
   align-items: baseline;
-
   gap: 120px;
 }
 .logotype {
@@ -425,12 +424,19 @@ img {
 .social-titel {
   display: flex;
   align-items: center;
+  margin-bottom: 16px;
 
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   color: #ffffff;
+  letter-spacing: 0.02em;
+}
+
+.link-footer {
+  display: flex;
+  gap: 16px;
 }
 
 /* Portfolio */
