--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
   --icon: #8e8f99;
   --social-link: #4d5ae5;
   --socials-link: #f4f4fd;
+  --footer-iconsbg: #31d0aa;
 }
 h1,
 h2,
@@ -312,12 +313,6 @@ img {
   padding: 32px 0;
 }
 
-.social-link {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-
 .icons-blu {
   width: 40px;
   height: 40px;
@@ -332,6 +327,13 @@ img {
   justify-content: center;
   align-items: center;
 }
+.social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
 .social-icons {
   fill: var(--socials-link);
 }
@@ -397,11 +399,14 @@ img {
 
   color: var(--icon);
 }
-
+.logo-brand {
+  fill: currentColor;
+}
 .link-items:hover,
 .link-items:focus {
   color: var(--link-ocean);
   border-color: var(--link-ocean);
+  fill: var(--link-ocean);
 }
 
 /* footer*/
@@ -415,7 +420,6 @@ img {
 .end-margin {
   display: flex;
   align-items: baseline;
-  gap: 120px;
 }
 .logotype {
   display: inline-block;
@@ -433,6 +437,9 @@ img {
   max-width: 264px;
   margin-right: 0;
   margin-left: 0;
+}
+.logo-p {
+  margin-right: 120px;
 }
 
 .logo_end {
@@ -455,6 +462,25 @@ img {
 .link-footer {
   display: flex;
   gap: 16px;
+}
+.link-icon-footer {
+  width: 100%;
+  height: 100%;
+  background-color: var(--social-link);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icons-blu-footer {
+  width: 40px;
+  height: 40px;
+}
+
+.icons-blu-footer :hover,
+.icons-blu-footer :focus {
+  background-color: var(--footer-iconsbg);
 }
 
 /* Portfolio */
